--- a/Assignment3/uno-client/package.json
+++ b/Assignment3/uno-client/package.json
@@ -8,10 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "socket.io-client": "^4.8.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.4.5",
+    "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
