--- a/Assignment2/uno/tsconfig.json
+++ b/Assignment2/uno/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "outDir": "./dist", 
     "target": "esnext",
     "module": "esnext",
     "strict": true,
@@ -35,7 +36,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-  ],
+, "src/main.js"  ],
   "exclude": [
     "node_modules"
   ]
