--- a/Assignment2/uno/package.json
+++ b/Assignment2/uno/package.json
@@ -11,15 +11,20 @@
     "baseUrl": "src"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "core-js": "^3.8.3",
+    "pinia": "^2.3.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.4.5",
+    "vue-router": "^4.5.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/node": "^22.10.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -30,7 +35,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2",
+    "vue-tsc": "^2.1.10"
   },
   "eslintConfig": {
     "root": true,
@@ -52,8 +58,5 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ],
-  "compilerOptions": {
-    "baseUrl": "src"
-  }
+  ]
 }
