--- a/Assignment2/uno/tsconfig.json
+++ b/Assignment2/uno/tsconfig.json
@@ -36,7 +36,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-, "src/main.js"  ],
+, "src/main.ts"  ],
   "exclude": [
     "node_modules"
   ]
